# FusionSparse

./: .gitignore  .gitmodules  DEV_JOURNAL.md  LICENSE  README.md  implementation_plan.md  pyproject.toml
benchmarks/baselines/: 01_new_design.py  02_circle_sketch.py  03_rectangle_sketch.py  04_simple_extrude.py  05_builder_extrude.py
benchmarks/compact/: 01_new_design.py  02_circle_sketch.py  03_rectangle_sketch.py  04_simple_extrude.py  05_builder_extrude.py
corpus/: README.md  corpus.lock.json
docs/: compact_reference.md  raw_mapping.md  update_workflow.md
examples/: builder_extrude.py  simple_extrude.py
fusion/harness/: __init__.py  smoke_suite.py
rules/: aliases.yaml  compact_exports.yaml  compact_policy.yaml  compact_reference.yaml  doc_overrides.yaml  enum_aliases.yaml  exclusions.yaml  family_overrides.yaml  sample_pairs.yaml  wrapper_dispatch.yaml
src/fusion_sparse/: __init__.py
tests/unit/: test_apply_rules.py  test_compact_workflow.py  test_corpus_loader.py  test_diff_ir.py  test_generate_metadata.py  test_generate_sample_pairs.py  test_map_api_coverage.py  test_measure_sparsity.py  test_merge_ir.py  test_parse_cpp_headers.py  test_parse_docs.py  test_parse_python_defs.py  test_runtime_core.py  test_sync_to_fusion.py
tools/: __init__.py  apply_rules.py  build_ir.py  cli.py  code_metrics.py  corpus_loader.py  diff_ir.py  generate_metadata.py  generate_sample_pairs.py  map_api_coverage.py  measure_sparsity.py  merge_ir.py  parse_cpp_headers.py  parse_docs.py  parse_python_defs.py  run_sample_pairs.py  sync_to_fusion.py
(+81 files in other folders)
